--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "ahooks": "^3.7.10",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "copy-to-clipboard": "^3.3.3",
+    "form-data": "^4.0.0",
     "lucide-react": "^0.335.0",
     "next": "14.1.0",
+    "pretty-bytes": "^6.1.1",
     "react": "^18",
     "react-dom": "^18",
+    "socks-proxy-agent": "^8.0.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
